--- a/macro_meso.html
+++ b/macro_meso.html
@@ -721,8 +721,8 @@
     MACRO: 'Macrophthalmus japonicus'
   };
 
-  const STORAGE_KEY = 'crab_burrow_settings';
-  const FILTER_KEY  = 'crab_burrow_filters';
+  const STORAGE_KEY = 'crab_burrow_settings_v2';
+  const FILTER_KEY  = 'crab_burrow_filters_v2';
   const DEFAULT_SETTINGS = {
     tideColorStart: '#96EFFF',
     tideColorEnd: '#F0F9FF',
