--- a/macro_meso.html
+++ b/macro_meso.html
@@ -783,19 +783,19 @@
     customCrabs: {
       [CrabType.UCA]: {
         name: 'Uca arcuata',
-        introImage: asset('图片2/Uca arcuata孤边招潮蟹.jpg')
+        introImage: './图片2/Uca arcuata孤边招潮蟹.jpg'
       },
       [CrabType.SESARMA]: {
         name: 'Sesarma dehaani',
-        introImage: asset('图片2/Sesarma dehaani无齿相手蟹.jpg')
+        introImage: './图片2/Sesarma dehaani无齿相手.jpg'
       },
       [CrabType.HELICE]: {
         name: 'Helice tridens',
-        introImage: asset('图片2/Helice tridens 天津厚蟹.jpg')
+        introImage: './图片2/Helice tridens 天津厚蟹.jpg'
       },
       [CrabType.MACRO]: {
         name: 'Macrophthalmus japonicus',
-        introImage: asset('图片2/Macrophthalmus japonicus日本大眼蟹.jpg')
+        introImage: './图片2/Macrophthalmus japonicus日本大眼蟹.jpg'
       },
     }
   };
