--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
 
   <script>
     document.getElementById("startBtn").addEventListener("click", () => {
-      window.location.href = "macro_meso.html?view=macro";
+      window.location.href = "/burrow-exhibit/macro_meso.html";
     });
 
     window.addEventListener("keydown", (e) => {
       if(e.key === "Enter") {
-        window.location.href = "macro_meso.html?view=macro";
+        window.location.href = "/burrow-exhibit/macro_meso.html";
       }
     });
   </script>
