--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
     })();
   
     document.getElementById("startBtn").addEventListener("click", () => {
-      go("macro_meso.html");
+      go("macro_meso.html?view=macro");
     });
   
     window.addEventListener("keydown", (e) => {
       if(e.key === "Enter") {
-        go("macro_meso.html");
+        go("macro_meso.html?view=macro");
       }
     });
   </script>
