--- a/macro_meso.html
+++ b/macro_meso.html
@@ -777,11 +777,11 @@
     customCrabs: {
       [CrabType.UCA]: {
         name: 'Uca arcuata',
-        introImage: asset('图片2/Uca arcuata孤边招潮蟹.jpg')
+        introImage: asset('图片2/Uca arcuata弧边招潮蟹.jpg')
       },
       [CrabType.SESARMA]: {
         name: 'Sesarma dehaani',
-        introImage: asset('图片2/Sesarma dehaani无齿相手蟹.jpg')
+        introImage: asset('图片2/Sesarma dehaani无齿相手.jpg')
       },
       [CrabType.HELICE]: {
         name: 'Helice tridens',
