--- a/macro_meso.html
+++ b/macro_meso.html
@@ -777,19 +777,19 @@
     customCrabs: {
       [CrabType.UCA]: {
         name: 'Uca arcuata',
-        introImage: asset('图片2/Uca arcuata弧边招潮蟹.jpg')
+        introImage: asset('图片2/Uca_arcuata_弧边招潮蟹.jpg')
       },
       [CrabType.SESARMA]: {
         name: 'Sesarma dehaani',
-        introImage: asset('图片2/Sesarma dehaani无齿相手.jpg')
+        introImage: asset('图片2/Sesarma_dehaani_无齿相手蟹.jpg')
       },
       [CrabType.HELICE]: {
         name: 'Helice tridens',
-        introImage: asset('图片2/Helice tridens 天津厚蟹.jpg')
+        introImage: asset('图片2/Helice_tridens_天津厚蟹.jpg')
       },
       [CrabType.MACRO]: {
         name: 'Macrophthalmus japonicus',
-        introImage: asset('图片2/Macrophthalmus japonicus日本大眼蟹.jpg')
+        introImage: asset('图片2/Macrophthalmus_japonicus_日本大眼蟹.jpg')
       },
     }
   };
