--- a/macro_meso.html
+++ b/macro_meso.html
@@ -336,7 +336,7 @@
     .dot[data-type="Uca arcuata"]{ background: color-mix(in srgb, var(--c-uca) 88%, white); }
     .dot[data-type="Sesarma dehaani"]{ background: color-mix(in srgb, var(--c-sesarma) 86%, white); }
     .dot[data-type="Helice tridens"]{ background: color-mix(in srgb, var(--c-helice) 85%, white); }
-    .dot[data-type="Macrophthalmus japonicus"]{ background: color-mix(in srgb, var(--c-macro) 86%, white); }
+    .dot[data-type="Macrophamus japonicus"]{ background: color-mix(in srgb, var(--c-macro) 86%, white); }
 
     .meso-plant{
       position:absolute;
@@ -603,7 +603,7 @@
           <div class="item" data-k="Helice tridens" title="Toggle Helice tridens">
             <span class="sw" style="background: var(--c-helice)"></span><span class="tx">Helice tridens</span>
           </div>
-          <div class="item" data-k="Macrophthalmus japonicus" title="Toggle Macrophthalmus japonicus">
+          <div class="item" data-k="Macrophamus japonicus" title="Toggle Macrophamus japonicus">
             <span class="sw" style="background: var(--c-macro)"></span><span class="tx">Macrophthalmus japonicus</span>
           </div>
         </div>
@@ -720,7 +720,7 @@
     UCA: 'Uca arcuata',
     SESARMA: 'Sesarma dehaani',
     HELICE: 'Helice tridens',
-    MACRO: 'Macrophthalmus japonicus'
+    MACRO: 'Macrophamus japonicus'
   };
 
   // ✅ 版本号：每次你改路径/资源，就加 1，避免历史 localStorage 干扰
@@ -797,7 +797,7 @@
         introImage: asset('图片2/Helice_tridens_天津厚蟹.jpg')
       },
       [CrabType.MACRO]: {
-        name: 'Macrophthalmus japonicus',
+        name: 'Macrophamus japonicus',
         introImage: asset('图片2/Macrophamus_japonicus_日本大眼蟹.jpg')
       },
     }
