--- a/macro_meso.html
+++ b/macro_meso.html
@@ -604,7 +604,7 @@
             <span class="sw" style="background: var(--c-helice)"></span><span class="tx">Helice tridens</span>
           </div>
           <div class="item" data-k="Macrophamus japonicus" title="Toggle Macrophamus japonicus">
-            <span class="sw" style="background: var(--c-macro)"></span><span class="tx">Macrophthalmus japonicus</span>
+            <span class="sw" style="background: var(--c-macro)"></span><span class="tx">Macrophamus japonicus</span>
           </div>
         </div>
 
